// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render FormConcept correctly 1`] = `
<form>
  <div
    className="form-group"
  >
    <withStateHandlers(Helptext)
      term="Dataset_content"
      title="Begrep"
    />
    <Field
      component={[Function]}
      fieldLabel="no"
      label="Begrep"
      name="concepts"
      type="text"
    />
  </div>
  <div
    className="form-group"
  >
    <withStateHandlers(Helptext)
      term="Dataset_keyword"
      title="Søkeord"
    />
    <Field
      component={[Function]}
      fieldLabel="nb"
      label="Søkeord"
      name="keyword"
      type="text"
    />
  </div>
</form>
`;

exports[`should render FormConcept correctly with syncErrors 1`] = `
<form>
  <div
    className="form-group"
  >
    <withStateHandlers(Helptext)
      term="Dataset_content"
      title="Begrep"
    />
    <Field
      component={[Function]}
      fieldLabel="no"
      label="Begrep"
      name="concepts"
      type="text"
    />
  </div>
  <div
    className="form-group"
  >
    <withStateHandlers(Helptext)
      term="Dataset_keyword"
      title="Søkeord"
    />
    <Field
      component={[Function]}
      fieldLabel="nb"
      label="Søkeord"
      name="keyword"
      type="text"
    />
    <div
      className="alert alert-danger mt-3"
    >
      Feil
    </div>
  </div>
</form>
`;
